--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_1.png.png" alt="reason">
+                            <img src="icons/reasons/reason_1.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
@@ -94,7 +94,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_2.png.png" alt="reason">
+                            <img src="icons/reasons/reason_2.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -107,7 +107,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_3.png.png" alt="reason">
+                            <img src="icons/reasons/reason_3.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
@@ -120,7 +120,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_4.png.png" alt="reason">
+                            <img src="icons/reasons/reason_4.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
@@ -133,7 +133,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_5.png.png" alt="reason">
+                            <img src="icons/reasons/reason_5.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
@@ -146,7 +146,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_6.png.png" alt="reason">
+                            <img src="icons/reasons/reason_6.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Всегда большое количество заказов</div>
@@ -159,7 +159,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_7.png.png" alt="reason">
+                            <img src="icons/reasons/reason_7.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -172,7 +172,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reason_8.png.png" alt="reason">
+                            <img src="icons/reasons/reason_8.png.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Без шашечек и наклеек</div>
